# cmake-windows-configuration

./: CMakeLists.txt  build.bat  main.cpp  rescan.bat
